Create first(!) version of model card creator

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 320.13it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 322.54it/s]"
      ]
     },
     {
@@ -197,17 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from new_nest import NEST\n",
+    "from nest import NEST\n",
     "nest = NEST(nest_dir=\"./\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.22it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.32it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -339,7 +339,7 @@
        "        -0.0095483 , -0.01467158]], dtype=float32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "          72719, 72948], dtype=int32)}}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
     }
    ],
    "source": [
-    "from new_nest import NEST\n",
+    "from nest import NEST\n",
     "nest = NEST(nest_dir=\"./\")\n",
     "\n",
     "# List all available models and their versions\n",
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4489,7 +4489,7 @@
        "    ...]}}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4500,21 +4500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding EEG responses:   0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.74s/it, Encoded images=100, Total images=100]\n"
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.82s/it, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -8644,7 +8637,7 @@
        "     ...]}}})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
