--- a/debug.ipynb
+++ b/debug.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 332.44it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 332.73it/s]\n"
      ]
     },
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "Available models: {'fmri_nsd_fwrf': ['1.0.0'], 'eeg_things_eeg_2_vit_b_32': ['1.0.0']}\n",
-      "Available modalities: ['eeg', 'fmri']\n"
+      "Available modalities: ['fmri', 'eeg']\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,8 +146,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.30it/s, Encoded images=100, Total images=100]\n",
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.95s/it, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.19it/s, Encoded images=100, Total images=100]\n",
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.74s/it, Encoded images=100, Total images=100]\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "        -0.0095483 , -0.01467158]], dtype=float32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.30it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.23it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -543,7 +543,7 @@
        "           72719, 72948], dtype=int32)}}})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "          72719, 72948], dtype=int32)}}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -787,21 +787,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding EEG responses:   0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.83s/it, Encoded images=100, Total images=100]\n"
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.74s/it, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -4931,7 +4924,7 @@
        "     ...]}}})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4956,7 +4949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -5017,7 +5010,7 @@
        " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5028,7 +5021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5089,7 +5082,7 @@
        " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
