Remove double nest_dir declaration

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 332.73it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 334.11it/s]\n"
      ]
     },
     {
@@ -146,8 +146,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.19it/s, Encoded images=100, Total images=100]\n",
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.74s/it, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.23it/s, Encoded images=100, Total images=100]\n",
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.72s/it, Encoded images=100, Total images=100]\n"
      ]
     }
    ],
@@ -156,13 +156,11 @@
     "fwrf_model = nest.get_encoding_model(\"fmri_nsd_fwrf\", \n",
     "                                     subject=1, \n",
     "                                     roi=\"V1\", \n",
-    "                                     nest_dir=nest_dir,\n",
     "                                     version=\"latest\") # or '1.0.0', or whichever version will be available\n",
     "\n",
     "\n",
     "eeg_model = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", \n",
-    "                                    subject=1, \n",
-    "                                    nest_dir=nest_dir)\n",
+    "                                    subject=1)\n",
     "\n",
     "fwrf_silico = nest.encode(fwrf_model, images)\n",
     "eeg_silico, eeg_metadata = nest.encode(eeg_model, images,return_metadata=True)"
@@ -264,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,13 +278,12 @@
     "fwrf_model = nest.get_encoding_model(\"fmri_nsd_fwrf\", \n",
     "                                     subject=1, \n",
     "                                     roi=\"V1\", \n",
-    "                                     nest_dir=nest_dir,\n",
     "                                     version=\"latest\") # or '1.0.0', or whichever version will be available"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.25it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.31it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -321,7 +318,7 @@
        "        -0.0095483 , -0.01467158]], dtype=float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +344,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.23it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.31it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -543,7 +540,7 @@
        "           72719, 72948], dtype=int32)}}})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +735,7 @@
        "          72719, 72948], dtype=int32)}}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -777,24 +774,30 @@
    ],
    "source": [
     "from nest import NEST\n",
-    "nest = NEST(nest_dir=\"./\")\n",
+    "nest = NEST(nest_dir=nest_dir)\n",
     "\n",
     "\n",
     "eeg_model = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", \n",
-    "                                    subject=1, \n",
-    "                                    nest_dir=nest_dir)"
+    "                                    subject=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.74s/it, Encoded images=100, Total images=100]\n"
+      "Encoding EEG responses:   0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.73s/it, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -4924,7 +4927,7 @@
        "     ...]}}})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4949,7 +4952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -5010,7 +5013,7 @@
        " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5021,7 +5024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5082,7 +5085,7 @@
        " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
