--- a/debug.ipynb
+++ b/debug.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 334.55it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 256.61it/s]"
      ]
     },
     {
@@ -52,6 +52,13 @@
       "Images shape:\n",
       "(100, 3, 227, 227)\n",
       "(Batch size × 3 RGB Channels x Width x Height)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -107,20 +114,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'model_id': 'fmri_nsd_fwrf', 'modality': 'fmri', 'dataset': 'NSD', 'features': 'feature-weighted receptive fields (fwrf)', 'repeats': 'single', 'subject_level': True, 'description': 'This model generates in silico fMRI responses to visual stimuli using feature-weighted receptive fields (fwrf).\\nIt was trained on the Natural Scenes Dataset (NSD), a large-scale 7T fMRI dataset of subjects viewing natural images.\\nThe model extracts visual features using a convolutional neural network and maps these features to brain activity \\npatterns across multiple visual regions of interest (ROIs).\\n', 'input': {'type': 'numpy.ndarray', 'shape': ['batch_size', 3, 'height', 'width'], 'description': 'The input should be a batch of RGB images.', 'constraints': ['Image values should be integers in range [0, 255]', 'Image dimensions (height, width) should be equal (square)', 'Minimum recommended image size: 224x224 pixels']}, 'output': {'type': 'numpy.ndarray', 'shape': ['batch_size', 'n_voxels'], 'description': 'The output is a 2D array containing predicted fMRI responses.\\nThe second dimension (n_voxels) corresponds to the number of voxels in the selected ROI,\\nwhich varies by ROI and subject. For subject 1, the number of voxels per ROI is as follows:\\n\\n  - V1: 1350\\n  - V2: 1433\\n  - V3: 1187\\n  - hV4: 687\\n  - EBA: 2971\\n  - FBA-2: 430\\n  - OFA: 355\\n  - FFA-1: 484\\n  - FFA-2: 310\\n  - PPA: 1033\\n  - RSC: 566\\n  - OPA: 1611\\n  - OWFA: 464\\n  - VWFA-1: 773\\n  - VWFA-2: 505\\n  - mfs-words: 165\\n  - early: 5917\\n  - midventral: 986\\n  - midlateral: 834\\n  - midparietal: 950\\n  - parietal: 3548\\n  - lateral: 7799\\n  - ventral: 7604\\n', 'dimensions': [{'name': 'batch_size', 'description': 'Number of stimuli in the batch'}, {'name': 'n_voxels', 'description': 'Number of voxels in the selected ROI, varies by ROI and subject'}]}, 'parameters': {'subject': {'type': 'int', 'required': True, 'valid_values': [1, 2, 3, 4, 5, 6, 7, 8], 'example': 1, 'description': 'Subject ID from the NSD dataset (1-8)', 'function': 'get_encoding_model'}, 'roi': {'type': 'str', 'required': True, 'valid_values': ['V1', 'V2', 'V3', 'hV4', 'EBA', 'FBA-2', 'OFA', 'FFA-1', 'FFA-2', 'PPA', 'RSC', 'OPA', 'OWFA', 'VWFA-1', 'VWFA-2', 'mfs-words', 'early', 'midventral', 'midlateral', 'midparietal', 'parietal', 'lateral', 'ventral'], 'example': 'V1', 'description': 'Region of Interest (ROI) for voxel prediction. Early visual areas (V1-V3), category-selective regions (EBA, FFA, etc.), or composite regions (lateral, ventral).', 'function': 'get_encoding_model'}, 'nest_dir': {'type': 'str', 'required': False, 'example': './', 'description': 'Root directory of the NEST repository (optional if default paths are set)', 'function': 'get_encoding_model'}, 'stimulus': {'type': 'numpy.ndarray', 'required': True, 'shape': ['batch_size', 3, 'height', 'width'], 'description': 'A batch of RGB images to be encoded. Images should be in integer format with values in the range [0, 255], and square dimensions (e.g. 224x224).', 'example': 'An array of shape [100, 3, 224, 224] representing 100 RGB images.', 'function': 'encode'}, 'device': {'type': 'str', 'required': False, 'valid_values': ['cpu', 'cuda', 'auto'], 'default': 'auto', 'example': 'auto', 'description': \"Device to run the model on. 'auto' will use CUDA if available, otherwise CPU.\", 'function': 'encode'}}, 'performance': {'accuracy_plots': ['neural_encoding_simulation_toolkit/encoding_models/modality-fmri/train_dataset-nsd/model-fwrf/encoding_models_accuracy']}, 'references': {'references': ['x']}}\n",
-      "Available models: ['fmri_nsd_fwrf', 'eeg_things_eeg_2_vit_b_32']\n",
-      "Available Modalities and Datasets:\n",
-      "=================================\n",
-      "• EEG\n",
-      "  └─ things_eeg_2\n",
-      "\n",
-      "• FMRI\n",
-      "  └─ NSD\n",
-      "\n",
-      "Model Catalog as Dict:: {'fmri': ['NSD'], 'eeg': ['things_eeg_2']}\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/domenicbersch/Documents/Repositories/NEST/nest/model_cards/fmri_nsd_fwrf.yaml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NEST\n\u001b[1;32m      3\u001b[0m nest \u001b[38;5;241m=\u001b[39m NEST(nest_dir\u001b[38;5;241m=\u001b[39mnest_dir)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# List all available models and their versions\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnest\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NEST\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_version\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __version__\n",
+      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/models/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# This imports will trigger model registration\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfmri\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01meeg\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/models/fmri/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Import models to register them\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfmri\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnsd_fwrf\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/models/fmri/nsd_fwrf.py:17\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnest\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfmri\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfwrf\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtorch_joint_training_unpacked_sequences\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Load model_info once at the top\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m model_info \u001b[38;5;241m=\u001b[39m \u001b[43mload_model_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Register this model with the registry using model_info\u001b[39;00m\n\u001b[1;32m     20\u001b[0m register_model(\n\u001b[1;32m     21\u001b[0m     model_id\u001b[38;5;241m=\u001b[39mmodel_info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_id\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m     22\u001b[0m     module_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnest.models.fmri.nsd_fwrf\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     26\u001b[0m     yaml_path\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mdirname(\u001b[38;5;18m__file__\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_cards\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfmri_nsd_fwrf.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m )\n",
+      "File \u001b[0;32m~/Documents/Repositories/NEST/nest/core/model_registry.py:82\u001b[0m, in \u001b[0;36mload_model_info\u001b[0;34m()\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_model_info\u001b[39m():\n\u001b[1;32m     81\u001b[0m     yaml_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mdirname(\u001b[38;5;18m__file__\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_cards\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfmri_nsd_fwrf.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 82\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mabspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43myaml_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     83\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m yaml\u001b[38;5;241m.\u001b[39msafe_load(f)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/domenicbersch/Documents/Repositories/NEST/nest/model_cards/fmri_nsd_fwrf.yaml'"
      ]
     }
    ],
@@ -140,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5031,7 +5037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5226,7 +5232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
